# print-yaml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
print_yaml/: main.py
tests/: data.yaml
